--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">OperateTest</string>
+    <array name="currency">
+        <item name="UGX">UGX</item>
+        <item name="USD">USD</item>
+        <item name="EUR">EUR</item>
+    </array>
 </resources>
